cmake_minimum_required(VERSION 3.20)
project(c__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(c__
        a.cpp)
add_executable(anmol a.cpp)
add_executable(zerosand1s Segregate.cpp)
add_executable(sumu sumukh.c)
add_executable(aman Aman3.cpp)
add_executable(aman2 Aman2.cpp)


add_executable(try1 try1.cpp)
add_executable(try try.cpp)
add_executable(Aman4 Aman4.cpp)
add_executable(try2 try2.cpp)