cmake_minimum_required(VERSION 3.20)
project(Assignment1_ds_sir)

set(CMAKE_CXX_STANDARD 14)

add_executable(Assignment1_ds_sir A1.cpp)

add_executable(a2 A2.cpp)
add_executable(a3 A3.cpp)
add_executable(a4 A4.cpp)
add_executable(try1 try1.cpp)
add_executable(A5 A5.cpp)
add_executable(A6 A6.cpp)
add_executable(A7 A7.cpp)
add_executable(A8 A8.cpp)
add_executable(a7second A7second.cpp)
add_executable(A9 A9.cpp)
add_executable(py_1 py_1.py)