cmake_minimum_required(VERSION 3.20)
project(Sorting)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sorting
        selection.cpp)
add_executable(in insertion.cpp)
add_executable(double_linklist double_linklist.cpp)
add_executable(merge merge.cpp)
add_executable(circular circular.c)
add_executable(circular2 circular2.c)
add_executable(mock mock.cpp)
add_executable(linklist linklist.cpp)
add_executable(link1 link1.cpp)
add_executable(link2 Traversing_linklist.cpp)
add_executable(pointer1 pointer1.cpp)
add_executable(searching searching.cpp )
add_executable(searching_LL searching_LL.cpp)
add_executable(begin_LL begin_LL.cpp)
add_executable(duplicate_array_remove duplicate_array_remove.cpp)
add_executable(pointer pointer.cpp)
add_executable(LL1 LL1.cpp)
add_executable(Linked_lisr_all Linked_lisr_all.c)
add_executable(circular_LL circular_LL.cpp)
add_executable(btree btree.c)
add_executable(postfix postfix.cpp)
add_executable(LL_stack LL_stack.cpp)
add_executable(try1 try1.cpp)
add_executable(try2 try2.cpp)
add_executable(LL_stack1 LL_stack1.cpp)
add_executable(stack Stack_balanced.cpp)
add_executable(deque_arr deque_arr.cpp)
add_executable(InsertEnd_LL InsertEnd_LL.cpp)
add_executable(try21 try21.cpp)
add_executable(try10 try10.cpp)
add_executable( value_equal Value_equal_to_index_value .cpp)
add_executable(v1 Value_equal_to_index_value .cpp)
add_executable(v2 Value_equal.cpp)
add_executable(try23 try23.cpp)
